--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adv-template",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Advanced string template",
   "license": "MIT",
   "author": {
@@ -13,13 +13,12 @@
   "main": "./out/index.js",
   "types": "./out/index.d.ts",
   "scripts": {
-    "test": "q-test",
+    "test": "q2-test",
     "compile": "rm -rf out && tsc",
     "watch": "tsc -w"
   },
   "devDependencies": {
-    "@types/q-test": "^1.0.0",
     "@types/node": "^17.0.25",
-    "q-test": "^1.0.0"
+    "q2-test": "^1.0.0"
   }
 }
